Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    # frontend healthcheck
    alb.ingress.kubernetes.io/healthcheck-path: /

spec:
  ingressClassName: alb

  rules:
  - host: amanpathakdevops.study
    http:

      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3500

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
